<resources>
    <string name="app_name">Bubu Tracker</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_map_api_key">secret</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="password_again">Password Again</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="bubu_tracker">Bubu Tracker</string>
    <string name="login">Log in with Auth0</string>
    <string name="login_subtitle">Sign in to share and view locations</string>
    <string name="logout">Log out</string>
    <string name="add_tracking">Track someone</string>
    <string name="add">Add</string>
    <string name="save_profile">Save profile</string>
    <string name="tracking_added">User added to tracking list</string>
    <string name="tracking_add_failed">Could not add user (HTTP %1$d)</string>
    <string name="network_error">Network error: %1$s</string>
    <string name="location_notification_title">Bubu Tracker</string>
    <string name="location_notification_text">Sharing your location</string>
    <string name="com_auth0_scheme">bubutracker</string>
    <string name="com_auth0_domain">YOUR_TENANT.auth0.com</string>
</resources>
