<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardElevation="8dp"
            app:strokeColor="@color/black"
            app:strokeWidth="0.5dp"
            app:cardCornerRadius="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                >
                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/gray"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="@dimen/marginTopRegister"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/FirstNameTextInput"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:hint="@string/first_name"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/marginTopRegister"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/LastNameTextInput"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:hint="@string/last_name"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/marginTopRegister"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EmailAddressTextInput"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:hint="@string/email_address"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    app:passwordToggleEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    android:layout_marginTop="@dimen/marginTopRegister"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/PasswordTextInput"
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:hint="@string/password"
                        android:maxLength="13"
                        tools:ignore="VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    app:passwordToggleEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    android:layout_marginTop="@dimen/marginTopRegister"

                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/PasswordConfirmationTextInput"
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:hint="@string/password_again"
                        android:maxLength="13"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerConfirmationButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTopRegister"
                    android:background="@color/Purple"
                    android:insetBottom="8dp"
                    android:text="@string/register"
                    android:textColor="@color/gray"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</ScrollView>
